# podcastdownloader

./: .env.example  .gitignore  CLAUDE.md  README.md  downloadtranscript.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  transcribe.py  transcript-player.html
Docs/: gettingStarted.md  planning.md
docs/: architecture.md  frontend-plan.md  getting-started.md  modal-setup.md
scripts/: app.py  convert_to_traditional.py  transcribe_local.py  transcribe_modal.py
scripts/local/: merge_chinese_words.py
scripts/modal/: transcribe_modal.py
src/: app.py
tests/: conftest.py  test_app.py  test_convert_to_traditional.py  test_download_podcast.py  test_merge_chinese_words.py  test_transcribe_local.py
web/: index.html  player-detail.html  player.html  transcript-player.html
