[project]
name = "podcast-downloader"
version = "0.1.0"
description = "Download podcasts and generate word-synced transcripts"
requires-python = ">=3.10"
dependencies = [
    "feedparser>=6.0.0",
    "jieba>=0.42.0",
    "opencc-python-reimplemented>=0.1.7",
    "python-multipart>=0.0.22",
    "requests>=2.28.0",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.100.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src", "scripts/local"]
omit = [
    "scripts/modal/transcribe_modal.py",  # Modal functions require cloud environment
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
